feat : add zustand & login state